# pychats-pet

./: .gitignore  Dockerfile  Makefile  pyproject.toml
docker_compose/: app.yaml
docker_compose/dev/: Dockerfile  docker-compose.yaml
pychats/application/api/: main.py
src/application/api/: main.py
src/application/sevices/: chat_service.py  user_service.py
src/domain/: constants.py
src/domain/aggregated_roots/: base.py  chat.py  chat_root.py  user.py  user_root.py
src/domain/entities/: base.py  chat.py  message.py  user.py
src/domain/events/: base.py
src/domain/events/chat/: chat_created.py
src/domain/events/chat_members/: user_changed_role.py  user_entered_chat.py  user_left_chat.py
src/domain/events/chat_messages/: message_removed.py  message_sent.py
src/domain/exeptions/: base.py  message.py
src/domain/exсeptions/: base.py
src/domain/exсeptions/chat/: base.py  chat_members.py  chat_messages.py  chat_roles.py  chat_title.py  message_text.py
src/domain/exсeptions/chat_exceptions/: base.py  chat_members.py  chat_messages.py  chat_roles.py  chat_title.py  message_text.py
src/domain/exсeptions/events/: serialization.py
src/domain/exсeptions/events_exceptions/: base.py  serialization.py
src/domain/exсeptions/user/: base.py  full_name.py  username.py
src/domain/exсeptions/user_exceptions/: base.py  full_name.py  username.py
src/domain/repositories/: chat_repository.py  user_repository.py
src/domain/utils/: chat_role.py  constants.py
src/domain/values/: base.py  message.py
src/domain/values/chat/: chat_title.py  message_text.py
src/domain/values/user/: full_name.py  username.py
tests/domain/: test_messages.py
tests/domain/aggregated_roots/: test_chat.py
