[tool.poetry]
name = "pychats"
version = "0.1.0"
description = ""
authors = ["tlyashok <tlyashok20200@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
motor = "^3.6.0"
pydantic = "^2.10.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
ipython = "^8.29.0"
pytest = "^8.3.3"
faker = "^30.8.2"
black = "^24.10.0"
flake8-class-attributes-order = "^0.1.3"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["pychats", "tests"]
lint.fixable = ["ALL"]
line-length = 88
lint.select = ["A", "TCH", "COM", "SIM", "E", "F", "W", "Q", "N", "ASYNC", "S", "I"]
lint.ignore = ["N818", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.flake8]
max-line-length = 88

[tool.black]
line-length = 88
skip-string-normalization = false